--- a/EAIsing_model.ipynb
+++ b/EAIsing_model.ipynb
@@ -21,6 +21,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Consider the Ising spins with $S_i = \\pm 1$ on the site $i$ of square lattice $L^d$, The system $Hamiltonian$ is:\n",
+    "$$\n",
+    "\\mathcal{H} = - \\sum_{<i,j>}J_{i,j}S_iS_j\n",
+    "$$\n",
+    "$J_{i,j}$ is the coupling between sites $i$ and $j$. For the Edward-Anderson (EA) Model considered here, $J_{i,j}$ has a Gaussian distribution with mean 0 and variance 1.\n",
+    "\n",
+    "For the initial configuration of the system, we let each spin having $\\frac{1}{2}$ probability to be $1$ and $\\frac{1}{2}$ probability to be $-1$, corresponding to temperature $T = \\infin$. We let the system follow the $Glauber Dynamics$: each time, a spin $S_i$ is randomly chosen, and we calculate the change in energy $\\Delta E$ if we flip the spin. If $\\Delta E < 0$, we flip the spin, and otherwise we don't (note that normally when $\\Delta E = 0$, it will have a probability of $\\frac{1}{2} to flip, however since we are taking continuous distribution of coupling $J_{i,j}$ here, meaning this event can't happen). We keep on running this process until we reach the ground state, meaning there is no spins to flip."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -111,6 +124,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The basic idea here is that we are having two Ising System $I_1$ and $I_2$, sharing the same initial configuration. We then let both of them go through the Glauber Dynamics, to track their overlap, we define it as:\n",
+    "$$\n",
+    "q_t(N) = \\frac{1}{N}\\sum_{i}^N S_i^{1}(t)S_i^{2}(t),\n",
+    "$$\n",
+    "where $N = L^d$ and $t$ is the time measured by the sweeps. We define each flip attempt to be $\\frac{1}{N}$ sweep, so that for each sweep we can averagely flip the whole system. Obviously, when $t = 0$, their overlap is $1$, but as the dynamic goes on, their overlap decreases."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -163,6 +187,13 @@
     "            active_indices.append(index)\n",
     "        it.iternext()\n",
     "    return active_indices"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After a number of sweeps, the list of spins that are still active to flip is actually relatively small. We can therefore use Kinetic Monte Carlo Method to speed up the running time: we set a list of active spins, and for each flip attempt, we only look at the spins in the active list, only this time we update $t$ by $\\frac{1}{f_t(N)}$, where $f_t(N)$ here is the size of the active list. After each flip, we remove the flipped spin, and check its neighbors whether they will be added or removed from the active list."
    ]
   },
   {
