--- a/EAIsing_model.ipynb
+++ b/EAIsing_model.ipynb
@@ -30,7 +30,7 @@
     "$$\n",
     "$J_{i,j}$ is the coupling between sites $i$ and $j$. For the Edward-Anderson (EA) Model considered here, $J_{i,j}$ has a Gaussian distribution with mean 0 and variance 1.\n",
     "\n",
-    "For the initial configuration of the system, we let each spin having $\\frac{1}{2}$ probability to be $1$ and $\\frac{1}{2}$ probability to be $-1$, corresponding to temperature $T = \\infin$. We let the system follow the $Glauber Dynamics$: each time, a spin $S_i$ is randomly chosen, and we calculate the change in energy $\\Delta E$ if we flip the spin. If $\\Delta E < 0$, we flip the spin, and otherwise we don't (note that normally when $\\Delta E = 0$, it will have a probability of $\\frac{1}{2} to flip, however since we are taking continuous distribution of coupling $J_{i,j}$ here, meaning this event can't happen). We keep on running this process until we reach the ground state, meaning there is no spins to flip."
+    "For the initial configuration of the system, we let each spin having $\\frac{1}{2}$ probability to be $1$ and $\\frac{1}{2}$ probability to be $-1$, corresponding to temperature $T = \\infin$. We let the system follow the $Glauber Dynamics$: each time, a spin $S_i$ is randomly chosen, and we calculate the change in energy $\\Delta E$ if we flip the spin. If $\\Delta E < 0$, we flip the spin, and otherwise we don't (note that normally when $\\Delta E = 0$, it will have a probability of $\\frac{1}{2}$ to flip, however since we are taking continuous distribution of coupling $J_{i,j}$ here, meaning this event can't happen). We keep on running this process until we reach the ground state, meaning there is no spins to flip."
    ]
   },
   {
