--- a/EAIsing_model.ipynb
+++ b/EAIsing_model.ipynb
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,6 +241,32 @@
     "config = np.random.choice([-1, 1], size=tuple([length] * dimension))\n",
     "S2 = config.copy()\n",
     "S1 = config.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1,  1, -1, ...,  1, -1,  1],\n",
+       "       [ 1, -1, -1, ...,  1,  1, -1],\n",
+       "       [ 1, -1,  1, ..., -1,  1,  1],\n",
+       "       ...,\n",
+       "       [ 1,  1, -1, ..., -1,  1,  1],\n",
+       "       [ 1,  1,  1, ...,  1, -1, -1],\n",
+       "       [ 1,  1,  1, ..., -1, -1,  1]])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "S1"
    ]
   },
   {
