--- a/Higher_dimension_EA.ipynb
+++ b/Higher_dimension_EA.ipynb
@@ -2,27 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/muddy_flesh/opt/anaconda3/lib/python3.9/site-packages/scipy/__init__.py:146: UserWarning: A NumPy version >=1.16.5 and <1.23.0 is required for this version of SciPy (detected version 1.23.4\n",
-      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import scipy as sp\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from IPython.display import clear_output"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +171,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def montecarlmethod(S,L,N,t):\n",
+    "    survival1 = 0\n",
+    "    survival2 = 0\n",
+    "    S2 = S.copy()\n",
+    "    S1 = S.copy()\n",
+    "    bonds = dict()\n",
+    "    while True:\n",
+    "        sweep(S1,L,N)\n",
+    "        survival1 = survival1 + 1\n",
+    "        print('S1 Sweep {} done'.format(survival1))\n",
+    "        clear_output(wait=True)\n",
+    "        if survival1 == t:\n",
+    "            break\n",
+    "\n",
+    "    S1_active = get_active(S1,L)\n",
+    "\n",
+    "    while True:\n",
+    "        k = kineticMonteCarlo(S1,L,S1_active)\n",
+    "        if k == 0:\n",
+    "            break\n",
+    "        survival1 = survival1 + k\n",
+    "    print('S1 done')\n",
+    "    clear_output(wait=True)\n",
+    "\n",
+    "    while True:\n",
+    "        sweep(S2,L,N)\n",
+    "        survival2 = survival2 + 1\n",
+    "        print('S2 Sweep {} done'.format(survival2))\n",
+    "        clear_output(wait=True)\n",
+    "        if survival2 == t:\n",
+    "            break\n",
+    "\n",
+    "    S2_active = get_active(S2,L)\n",
+    "\n",
+    "    while True:\n",
+    "        k = kineticMonteCarlo(S2,L,S2_active)\n",
+    "        if k == 0:\n",
+    "            break\n",
+    "        survival2 = survival2 + k\n",
+    "\n",
+    "    return [overlap(S1,S2,N),survival1,survival2] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,36 +235,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sweep 1 done\n",
-      "Sweep 2 done\n",
-      "Sweep 3 done\n",
-      "Sweep 4 done\n",
-      "Sweep 5 done\n",
-      "Sweep 6 done\n",
-      "Sweep 7 done\n",
-      "Sweep 8 done\n",
-      "Sweep 9 done\n",
-      "Sweep 10 done\n",
-      "Sweep 1 done\n",
-      "Sweep 2 done\n",
-      "Sweep 3 done\n",
-      "Sweep 4 done\n",
-      "Sweep 5 done\n",
-      "Sweep 6 done\n",
-      "Sweep 7 done\n",
-      "Sweep 8 done\n",
-      "Sweep 9 done\n",
-      "Sweep 10 done\n",
-      "0.4122\n",
-      "11.0\n",
-      "11.5\n"
+      "0.4218\n",
+      "10\n",
+      "14.0\n"
      ]
     }
    ],
@@ -234,7 +255,6 @@
     "while len(get_active(S1,L)) != 0:\n",
     "    sweep(S1,L,N)\n",
     "    survival1 = survival1 + 1\n",
-    "    print('Sweep {} done'.format(survival1))\n",
     "    if survival1 == 10:\n",
     "        break\n",
     "\n",
@@ -249,7 +269,6 @@
     "while len(get_active(S2,L)) != 0:\n",
     "    sweep(S2,L,N)\n",
     "    survival2 = survival2 + 1\n",
-    "    print('Sweep {} done'.format(survival2))\n",
     "    if survival2 == 10:\n",
     "        break\n",
     "\n",
@@ -268,412 +287,170 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sweep 1 done\n",
-      "Sweep 2 done\n",
-      "Sweep 3 done\n",
-      "Sweep 4 done\n",
-      "Sweep 5 done\n",
-      "Sweep 6 done\n",
-      "Sweep 7 done\n",
-      "Sweep 8 done\n",
-      "Sweep 9 done\n",
-      "Sweep 10 done\n",
-      "Sweep 1 done\n",
-      "Sweep 2 done\n",
-      "Sweep 3 done\n",
-      "Sweep 4 done\n",
-      "Sweep 5 done\n",
-      "Sweep 6 done\n",
-      "Sweep 7 done\n",
-      "Sweep 8 done\n",
-      "Sweep 9 done\n",
-      "Sweep 10 done\n",
-      "0.3580081632653061\n",
-      "17.200353336376395\n",
-      "18.83392539721801\n"
+      "[0.35622857142857145, 16.999901945753038, 16.74722469238637]\n"
      ]
     }
    ],
    "source": [
-    "bonds = dict()\n",
     "L = np.array([100, 35, 35])\n",
     "N = np.prod(L)\n",
-    "model = 'EA'\n",
-    "config = np.random.choice([-1, 1], size=tuple(L))\n",
-    "S2 = config.copy()\n",
-    "S1 = config.copy()\n",
-    "\n",
-    "survival1 = 0\n",
-    "survival2 = 0\n",
-    "\n",
-    "while len(get_active(S1,L)) != 0:\n",
-    "    sweep(S1,L,N)\n",
-    "    survival1 = survival1 + 1\n",
-    "    print('Sweep {} done'.format(survival1))\n",
-    "    if survival1 == 10:\n",
-    "        break\n",
-    "\n",
-    "S1_active = get_active(S1,L)\n",
-    "\n",
-    "while True:\n",
-    "    k = kineticMonteCarlo(S1,L,S1_active)\n",
-    "    if k == 0:\n",
-    "        break\n",
-    "    survival1 = survival1 + k\n",
-    "\n",
-    "while len(get_active(S2,L)) != 0:\n",
-    "    sweep(S2,L,N)\n",
-    "    survival2 = survival2 + 1\n",
-    "    print('Sweep {} done'.format(survival2))\n",
-    "    if survival2 == 10:\n",
-    "        break\n",
-    "\n",
-    "S2_active = get_active(S2,L)\n",
-    "\n",
-    "while True:\n",
-    "    k = kineticMonteCarlo(S2,L,S2_active)\n",
-    "    if k == 0:\n",
-    "        break\n",
-    "    survival2 = survival2 + k\n",
-    "\n",
-    "print(overlap(S1,S2,N))\n",
-    "print(survival1)\n",
-    "print(survival2) "
+    "S = np.random.choice([-1, 1], size=tuple(L))\n",
+    "bonds = dict()\n",
+    "print(montecarlmethod(S,L,N,10))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sweep 1 done\n",
-      "Sweep 2 done\n",
-      "Sweep 3 done\n",
-      "Sweep 4 done\n",
-      "Sweep 5 done\n",
-      "Sweep 6 done\n",
-      "Sweep 7 done\n",
-      "Sweep 8 done\n",
-      "Sweep 9 done\n",
-      "Sweep 10 done\n",
-      "Sweep 1 done\n",
-      "Sweep 2 done\n",
-      "Sweep 3 done\n",
-      "Sweep 4 done\n",
-      "Sweep 5 done\n",
-      "Sweep 6 done\n",
-      "Sweep 7 done\n",
-      "Sweep 8 done\n",
-      "Sweep 9 done\n",
-      "Sweep 10 done\n",
-      "0.32598\n",
-      "22.40991434512194\n",
-      "19.781636978116094\n"
+      "[0.3317, 19.901889487517508, 19.112948302026172]\n"
      ]
     }
    ],
    "source": [
-    "bonds = dict()\n",
     "L = np.array([100, 10, 10, 10])\n",
     "N = np.prod(L)\n",
-    "model = 'EA'\n",
-    "config = np.random.choice([-1, 1], size=tuple(L))\n",
-    "S2 = config.copy()\n",
-    "S1 = config.copy()\n",
-    "\n",
-    "survival1 = 0\n",
-    "survival2 = 0\n",
-    "\n",
-    "while len(get_active(S1,L)) != 0:\n",
-    "    sweep(S1,L,N)\n",
-    "    survival1 = survival1 + 1\n",
-    "    print('Sweep {} done'.format(survival1))\n",
-    "    if survival1 == 10:\n",
-    "        break\n",
-    "\n",
-    "S1_active = get_active(S1,L)\n",
-    "\n",
-    "while True:\n",
-    "    k = kineticMonteCarlo(S1,L,S1_active)\n",
-    "    if k == 0:\n",
-    "        break\n",
-    "    survival1 = survival1 + k\n",
-    "\n",
-    "while len(get_active(S2,L)) != 0:\n",
-    "    sweep(S2,L,N)\n",
-    "    survival2 = survival2 + 1\n",
-    "    print('Sweep {} done'.format(survival2))\n",
-    "    if survival2 == 10:\n",
-    "        break\n",
-    "\n",
-    "S2_active = get_active(S2,L)\n",
-    "\n",
-    "while True:\n",
-    "    k = kineticMonteCarlo(S2,L,S2_active)\n",
-    "    if k == 0:\n",
-    "        break\n",
-    "    survival2 = survival2 + k\n",
-    "\n",
-    "print(overlap(S1,S2,N))\n",
-    "print(survival1)\n",
-    "print(survival2) "
+    "S = np.random.choice([-1, 1], size=tuple(L))\n",
+    "bonds = dict()\n",
+    "print(montecarlmethod(S,L,N,10))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sweep 1 done\n",
-      "Sweep 2 done\n",
-      "Sweep 3 done\n",
-      "Sweep 4 done\n",
-      "Sweep 5 done\n",
-      "Sweep 6 done\n",
-      "Sweep 7 done\n",
-      "Sweep 8 done\n",
-      "Sweep 9 done\n",
-      "Sweep 10 done\n",
-      "Sweep 1 done\n",
-      "Sweep 2 done\n",
-      "Sweep 3 done\n",
-      "Sweep 4 done\n",
-      "Sweep 5 done\n",
-      "Sweep 6 done\n",
-      "Sweep 7 done\n",
-      "Sweep 8 done\n",
-      "Sweep 9 done\n",
-      "Sweep 10 done\n",
-      "0.29878086419753086\n",
-      "21.16139052794436\n",
-      "22.42726034690511\n"
+      "[0.3082561728395062, 25.345473053767797, 19.50071685422071]\n"
      ]
     }
    ],
    "source": [
-    "bonds = dict()\n",
     "L = np.array([100, 6, 6, 6, 6])\n",
     "N = np.prod(L)\n",
-    "model = 'EA'\n",
-    "config = np.random.choice([-1, 1], size=tuple(L))\n",
-    "S2 = config.copy()\n",
-    "S1 = config.copy()\n",
-    "\n",
-    "survival1 = 0\n",
-    "survival2 = 0\n",
-    "\n",
-    "while len(get_active(S1,L)) != 0:\n",
-    "    sweep(S1,L,N)\n",
-    "    survival1 = survival1 + 1\n",
-    "    print('Sweep {} done'.format(survival1))\n",
-    "    if survival1 == 10:\n",
-    "        break\n",
-    "\n",
-    "S1_active = get_active(S1,L)\n",
-    "\n",
-    "while True:\n",
-    "    k = kineticMonteCarlo(S1,L,S1_active)\n",
-    "    if k == 0:\n",
-    "        break\n",
-    "    survival1 = survival1 + k\n",
-    "\n",
-    "while len(get_active(S2,L)) != 0:\n",
-    "    sweep(S2,L,N)\n",
-    "    survival2 = survival2 + 1\n",
-    "    print('Sweep {} done'.format(survival2))\n",
-    "    if survival2 == 10:\n",
-    "        break\n",
-    "\n",
-    "S2_active = get_active(S2,L)\n",
-    "\n",
-    "while True:\n",
-    "    k = kineticMonteCarlo(S2,L,S2_active)\n",
-    "    if k == 0:\n",
-    "        break\n",
-    "    survival2 = survival2 + k\n",
-    "\n",
-    "print(overlap(S1,S2,N))\n",
-    "print(survival1)\n",
-    "print(survival2) "
+    "S = np.random.choice([-1, 1], size=tuple(L))\n",
+    "bonds = dict()\n",
+    "print(montecarlmethod(S,L,N,10))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sweep 1 done\n",
-      "Sweep 2 done\n",
-      "Sweep 3 done\n",
-      "Sweep 4 done\n",
-      "Sweep 5 done\n",
-      "Sweep 6 done\n",
-      "Sweep 7 done\n",
-      "Sweep 8 done\n",
-      "Sweep 9 done\n",
-      "Sweep 10 done\n",
-      "Sweep 1 done\n",
-      "Sweep 2 done\n",
-      "Sweep 3 done\n",
-      "Sweep 4 done\n",
-      "Sweep 5 done\n",
-      "Sweep 6 done\n",
-      "Sweep 7 done\n",
-      "Sweep 8 done\n",
-      "Sweep 9 done\n",
-      "Sweep 10 done\n",
-      "0.28375\n",
-      "24.25855650590691\n",
-      "21.940183082113823\n"
+      "[0.2760546875, 26.82772845118168, 25.217977059365776]\n"
      ]
     }
    ],
    "source": [
-    "bonds = dict()\n",
     "L = np.array([100, 4, 4, 4, 4, 4])\n",
     "N = np.prod(L)\n",
-    "model = 'EA'\n",
-    "config = np.random.choice([-1, 1], size=tuple(L))\n",
-    "S2 = config.copy()\n",
-    "S1 = config.copy()\n",
-    "\n",
-    "survival1 = 0\n",
-    "survival2 = 0\n",
-    "\n",
-    "while len(get_active(S1,L)) != 0:\n",
-    "    sweep(S1,L,N)\n",
-    "    survival1 = survival1 + 1\n",
-    "    print('Sweep {} done'.format(survival1))\n",
-    "    if survival1 == 10:\n",
-    "        break\n",
-    "\n",
-    "S1_active = get_active(S1,L)\n",
-    "\n",
-    "while True:\n",
-    "    k = kineticMonteCarlo(S1,L,S1_active)\n",
-    "    if k == 0:\n",
-    "        break\n",
-    "    survival1 = survival1 + k\n",
-    "\n",
-    "while len(get_active(S2,L)) != 0:\n",
-    "    sweep(S2,L,N)\n",
-    "    survival2 = survival2 + 1\n",
-    "    print('Sweep {} done'.format(survival2))\n",
-    "    if survival2 == 10:\n",
-    "        break\n",
-    "\n",
-    "S2_active = get_active(S2,L)\n",
-    "\n",
-    "while True:\n",
-    "    k = kineticMonteCarlo(S2,L,S2_active)\n",
-    "    if k == 0:\n",
-    "        break\n",
-    "    survival2 = survival2 + k\n",
-    "\n",
-    "print(overlap(S1,S2,N))\n",
-    "print(survival1)\n",
-    "print(survival2) "
+    "S = np.random.choice([-1, 1], size=tuple(L))\n",
+    "bonds = dict()\n",
+    "print(montecarlmethod(S,L,N,10))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sweep 1 done\n",
-      "Sweep 2 done\n",
-      "Sweep 3 done\n",
-      "Sweep 4 done\n",
-      "Sweep 5 done\n",
-      "Sweep 6 done\n",
-      "Sweep 7 done\n",
-      "Sweep 8 done\n",
-      "Sweep 9 done\n",
-      "Sweep 10 done\n",
-      "Sweep 1 done\n",
-      "Sweep 2 done\n",
-      "Sweep 3 done\n",
-      "Sweep 4 done\n",
-      "Sweep 5 done\n",
-      "Sweep 6 done\n",
-      "Sweep 7 done\n",
-      "Sweep 8 done\n",
-      "Sweep 9 done\n",
-      "Sweep 10 done\n",
-      "0.2878189300411523\n",
-      "26.445836665395746\n",
-      "24.085595613574284\n"
+      "[0.27447916666666666, 24.639219521915972, 24.968819439023274]\n"
      ]
     }
    ],
    "source": [
-    "bonds = dict()\n",
-    "L = np.array([100, 3, 3, 3, 3, 3, 3])\n",
+    "L = np.array([100, 4, 4, 4, 3, 3, 3])\n",
     "N = np.prod(L)\n",
-    "model = 'EA'\n",
-    "config = np.random.choice([-1, 1], size=tuple(L))\n",
-    "S2 = config.copy()\n",
-    "S1 = config.copy()\n",
-    "\n",
-    "survival1 = 0\n",
-    "survival2 = 0\n",
-    "\n",
-    "while len(get_active(S1,L)) != 0:\n",
-    "    sweep(S1,L,N)\n",
-    "    survival1 = survival1 + 1\n",
-    "    print('Sweep {} done'.format(survival1))\n",
-    "    if survival1 == 10:\n",
-    "        break\n",
-    "\n",
-    "S1_active = get_active(S1,L)\n",
-    "\n",
-    "while True:\n",
-    "    k = kineticMonteCarlo(S1,L,S1_active)\n",
-    "    if k == 0:\n",
-    "        break\n",
-    "    survival1 = survival1 + k\n",
-    "\n",
-    "while len(get_active(S2,L)) != 0:\n",
-    "    sweep(S2,L,N)\n",
-    "    survival2 = survival2 + 1\n",
-    "    print('Sweep {} done'.format(survival2))\n",
-    "    if survival2 == 10:\n",
-    "        break\n",
-    "\n",
-    "S2_active = get_active(S2,L)\n",
-    "\n",
-    "while True:\n",
-    "    k = kineticMonteCarlo(S2,L,S2_active)\n",
-    "    if k == 0:\n",
-    "        break\n",
-    "    survival2 = survival2 + k\n",
-    "\n",
-    "print(overlap(S1,S2,N))\n",
-    "print(survival1)\n",
-    "print(survival2) "
+    "S = np.random.choice([-1, 1], size=tuple(L))\n",
+    "bonds = dict()\n",
+    "print(montecarlmethod(S,L,N,10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.2687334247828075, 32.1945538892262, 28.215191167833108]\n"
+     ]
+    }
+   ],
+   "source": [
+    "L = np.array([100, 3, 3, 3, 3, 3, 3, 3])\n",
+    "N = np.prod(L)\n",
+    "S = np.random.choice([-1, 1], size=tuple(L))\n",
+    "bonds = dict()\n",
+    "print(montecarlmethod(S,L,N,10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.27997942386831276, 29.6617629189774, 27.14782407125634]\n"
+     ]
+    }
+   ],
+   "source": [
+    "L = np.array([100, 3, 3, 3, 3, 3, 3, 2, 2])\n",
+    "N = np.prod(L)\n",
+    "S = np.random.choice([-1, 1], size=tuple(L))\n",
+    "bonds = dict()\n",
+    "print(montecarlmethod(S,L,N,12))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.28444444444444444, 29.010920474282887, 28.42584671490468]\n"
+     ]
+    }
+   ],
+   "source": [
+    "L = np.array([100, 3, 3, 3, 3, 3, 2, 2, 2, 2])\n",
+    "N = np.prod(L)\n",
+    "S = np.random.choice([-1, 1], size=tuple(L))\n",
+    "bonds = dict()\n",
+    "print(montecarlmethod(S,L,N,13))"
    ]
   }
  ],
